


// MARK: - (GENERAL)
"OK" = "OK";
"DELETE" = "Delete";
"SETTINGS" = "Basic Settings";
"DISMISS" = "Dismiss";
"CHECK_SETTINGS" = "Check Settings";

/* Shown by default when the user hasn't select a project or item */
"EMPTY_TAB_PLACEHOLDER" = "Please select something from the menu to begin.";



// MARK: - (TABS)
"HOME" = "Home";
"OPEN" = "Open";
"CLOSED" = "Closed";
"AWARDS" = "Awards";
"EDIT_PROJECT" = "Edit Project";
"EDIT_ITEM" = "Edit Item";



// MARK: - (HOME VIEW)
"NEXT_ITEMS" = "Up next";
"MORE_ITEMS" = "More to explore";



// MARK: - (AWARDS VIEW)
"LOCKED" = "Locked"; /* award has not been earned */
"UNLOCKED %@" = "Unlocked: %@"; /* award has been earned, displaying the award */



// MARK: - (PROJECTS VIEW)
"OPEN_PROJECTS" = "Open Projects";
"CLOSED_PROJECTS" = "Closed Projects";
"ADD_PROJECT" = "Add Project";
"ADD_ITEM" = "Add New Item";

/* displayed if no projects exist */
"PROJECTS_PLACEHOLDER" = "There's nothing here right now.";

/* A button that shows a menu with the following options */
"SORT_LABEL" = "Sort items"; /* The title of the menu */
"OPTIMIZED_SORT" = "Optimized"; /* Sort using an optimized algorithm */
"CREATIONDATE_SORT" = "Creation Date"; /* Sort by the date items were created */
"TITLE_SORT" = "Title"; /* Sort by item title */

/* Default names for a new project and a new item */
"PROJECT_DEFAULTNAME" = "New Project";
"ITEM_DEFAULTNAME" = "New Item";



// MARK: - (EDITING PROJECTS)
"PROJECT_NAME_PLACEHOLDER" = "Project name"; /* placeholder for a project name */
"PROJECT_DESCRIPTION_PLACEHOLDER" = "Description of this project";
"PROJECT_SELECT_COLOR" = "Select a project color";

"PROJECT_REMINDERS" = "Project Reminders";
"PROJECT_SHOW_REMINDERS" = "Show reminders";
"PROJECT_REMINDER_TIME" = "Reminder time";
"PROJECT_REMINDER_ERROR_TITLE" = "Oops!";
"PROJECT_REMINDER_ERROR_MESSAGE" = "There was a problem. Please check you have notifications enabled.";

/* Options to close (mark as finished), open (mark as unfinished), or delete a project. */
"CLOSE_PROJECT" = "Close this project";
"REOPEN_PROJECT" = "Reopen this project";
"DELETE_PROJECT" = "Delete this project";

/* Warnings about closing and deleting projects*/
"PROJECT_CLOSE_WARNING" = "Closing a project moves it from the Open to Closed tab.";
"PROJECT_DELETE_WARNING" = "Deleting it removes the project entirely.";
"PROJECT_DELETE_ALERT_TITLE" = "Delete project?";
"PROJECT_DELETE_ALERT_MESSAGE" = "Are you sure you want to delete this project? You will also delete all the items it contains.";



// MARK: - (EDITING ITEMS)
"ITEM_NAME" = "Item name";
"ITEM_DESCRIPTION" = "Description";
"MARK_COMPLETED" = "Mark Completed"; /* Mark this item as being completed (finished/accomplished) */

"PRIORITY" = "Priority";
"PRIORITY_LOW" = "Low";
"PRIORITY_MID" = "Mid";
"PRIORITY_HIGH" = "High";



// MARK: - (UNLOCKING PREMIUM)
"IAP_HEADLINE" = "Get Unlimited Projects";
"IAP_DESCRIPTION %@" = "You can add three projects for free, or pay %@ to add unlimited projects.";
"IAP_RESTORE_DESCRIPTION" = "If you already bought the unlock on another device, press Restore Purchases.";

"IAP_BUY_BUTTON %@" = "Buy: %@";
"IAP_RESTORE_BUTTON" = "Restore Purchases";

"IAP_ERROR" = "Sorry, there was an error loading the store. Please try again later.";
"IAP_LOADING" = "Loading…";
"IAP_SUCCESSFUL" = "Thank you!";
"IAP_PENDING" = "Thank you! Your request is pending approval, but you can carry on using the app in the meantime.";



// MARK: - (WIDGETS)
"WIDGET_TITLE" = "Up next…";
"WIDGET_PLACEHOLDER" = "Nothing!";
"WIDGET_SIMPLE_DESCRIPTION" = "Your #1 top-priority item.";
"WIDGET_COMPLEX_DESCRIPTION" = "Your most important items.";



// MARK: - (ACCESSIBILITY)
/* describes elements on the home screen */
"A11Y_COMPLETE_DESCRIPTION %@ %lld %g%%" = "%@, %lld items, %g%% complete.";
/* asserts that a given project is completed */
"A11Y_COMPLETED %@" = "%@, completed.";
/* asserts that a given project has a high priority */
"A11Y_PRIORITY %@" = "%@, high priority.";

/* Different colors */
"PINK" = "Pink";
"PURPLE" = "Purple";
"RED" = "Red";
"ORANGE" = "Orange";
"GOLD" = "Gold";
"GREEN" = "Green";
"TEAL" = "Teal";
"LIGHT_BLUE" = "Light Blue";
"DARK_BLUE" = "Dark Blue";
"MIDNIGHT" = "Midnight";
"DARK_GRAY" = "Dark Gray";
"GRAY" = "Gray";
